# draw.io

./: .gitignore  CLAUDE.md  PROGRESS.md  README.md  ROADMAP.md  SECURITY.md  instructions.md
.github/workflows/: ci.yml
prairielearn/: .gitignore  README.md  deploy.sh  integration-plan.md
prairielearn/example-course/: infoCourse.json
prairielearn/example-course/courseInstances/Sp26/: infoCourseInstance.json
prairielearn/example-course/elements/pl-scribble/: info.json  pl-scribble.py
prairielearn/example-course/questions/scratch-demo/: info.json  question.html
prairielearn/example-course/questions/scratch-demo-overlay/: info.json  question.html  server.py
scribble/: Cargo.toml  README.md
scribble/src/: export.rs  history.rs  lib.rs  model.rs
scribble/web/: app.js  colorbar.js  embed.js  floating-panel.js  idb.js  index.html  modals.js  notes-dock.js  pdf-writer.js  style.css  text-extract.js  utils.js
scribble/web/embed/: capture.js  host-demo.html
scribble/web/pkg/: scribble.js  scribble_bg.wasm
