[package]
name = "scribble"
version = "0.1.0"
edition = "2021"
description = "Classroom PDF annotation tool (Rust/WASM core)"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "=0.2.100"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
web-sys = { version = "0.3", features = ["CanvasRenderingContext2d"] }

[profile.release]
opt-level = "s"
lto = true
panic = "abort"
